# innovation-prize

./: .gitignore  README.md
search-app/: .gitignore  README.md  compose.yml  sample.env
search-app/.devcontainer/: compose.yml  devcontainer.json
search-app/.devcontainer/_vscode/: launch.json
search-app/client/demo_client/: App.vue  Dockerfile  README.md  config.js  index.html  main.js  package-lock.json  package.json  sample.env  sample_request.json  vite.config.js
search-app/client/demo_client/components/: Chatbot.vue  Content.vue  DataSearch.vue  Map.vue  Navbar.vue  Sidebar.vue
search-app/server/: .gitignore  Dockerfile  README.md  pyproject.toml  record_manager_cache.sql  requirements.txt
search-app/server/app/: indexer_manager.py  llm_manager.py  server.py  utils.py
search-app/server/chroma_db/: chroma.sqlite3
search-app/server/chroma_db/7373c8b7-df2b-40ca-a5a3-6b9c226d9171/: index_metadata.pickle
search-app/server/config/: config.json  config.py
search-app/server/connectors/: geojson_osm.py  pygeoapi_retriever.py
search-app/server/graph/: actions.py  graph.py  prompts.py  routers.py  spatial_utilities.py
search-app/server/graph/custom_prompts/: custom_prompts.py
search-app/server/indexing/: indexer.py
search-app/server/result_explainer/: search_result_explainer.py
