[tool.poetry]
name = "search-app-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "0.23.2"
langserve = "0.3.0"
nest-asyncio = "^1.6.0"
chromadb = "0.5.0"
geojson = "3.1.0"
bs4 = "^0.0.1"
fastapi_sessions = "0.3.2"
gpt4all = "2.8.2"
sentence-transformers = "3.0.0"
shap = "0.46.0"
aiosqlite = "^0.20.0"
pydantic = "2.10.3"
numpy = "1.26.4"
aiohttp = "3.9.5"
beautifulsoup4 = "4.12.2"
fastapi = "0.115.0"
ipython = "8.12.3"
langchain = "0.3.10"
langchain-community = "0.3.10"
langchain-core = "0.3.22"
langchain-groq = "0.2.1"
langchain-openai = "0.2.11"
langgraph = "0.2.56"
requests = "2.32.3"
scikit-learn = "1.3.0"
semantic-router = "0.0.20"
tqdm = "4.66.5"
typing-extensions = "4.12.2"

[tool.poetry.extras]
runtime = ["semantic-router"]

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
