[tool.poetry]
name = "search-app-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
aiohttp = "3.9.5"
aiosqlite = "^0.20.0"
beautifulsoup4 = "4.12.2"
bs4 = "^0.0.1"
chromadb = "0.5.3"
duckduckgo-search = "^7.2.1"
fastapi = "0.115.0"
geojson = "3.1.0"
gpt4all = "2.8.2"
gunicorn = "^23.0.0"
ipython = "8.12.3"
langchain = "0.3.10"
langchain-chroma = "^0.2.0"
langchain-community = "0.3.10"
langchain-core = "0.3.22"
langchain-groq = "0.2.1"
langchain-openai = "0.2.11"
langgraph = "0.2.56"
langgraph-checkpoint-sqlite = "^2.0.1"
langserve = "0.3.0"
loguru = "^0.7.3"
nest-asyncio = "^1.6.0"
numpy = "1.26.4"
pydantic = "2.10.3"
python = ">=3.10,<3.13"
requests = "2.32.3"
scikit-learn = "1.3.0"
semantic-router = "0.0.20"
sentence-transformers = "3.0.0"
shap = "0.46.0"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
ultradict = "^0.0.6"
uvicorn = "0.23.2"

[tool.poetry.scripts]
start = "app.server:app"

[tool.poetry.extras]
runtime = ["semantic-router"]

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.31"
flake8 = "^7.1.1"
black = "^23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
